--- a/src/app/admin/profile/profile.component.html
+++ b/src/app/admin/profile/profile.component.html
@@ -4,9 +4,14 @@
         alt="Photo of a Shiba Inu"> -->
     <!-- <mat-icon class="person-icon">person</mat-icon> -->
     <div class="profile-title" title>
-        <app-contact-initials (click)="changeImg()" [contactName]="profile?.name" class="profile-image" (click)="changeImg()"
+        <div class="profile-image">
+            <app-contact-initials [contactName]="profile?.name"
             [imgSrc]="profile?.image" [size]="'60px'" [borderColor]="'#A8A8A8'"
             [backgroundColor]="'#D9D9D9'"></app-contact-initials>
+            <button class="change-img" (click)="changeImg()" mat-mini-fab color="primary" aria-label="Example icon button with a change circle icon">
+                <mat-icon>change_circle</mat-icon>
+            </button>
+        </div>
         <p *ngIf="profile?.name">{{profile?.name}}</p>
     </div>
 
