--- a/src/app/shared/shared-components/image-cropper/image-cropper.component.scss
+++ b/src/app/shared/shared-components/image-cropper/image-cropper.component.scss
@@ -14,6 +14,11 @@
 .drop-zone {
     border: dotted 3px lightgray;
     height: 40vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 16px;
 }
 
 .nv-file-over {
