bind legal-notice iframe from my personal page

--- a/src/app/admin/legal-notice/legal-notice.component.html
+++ b/src/app/admin/legal-notice/legal-notice.component.html
@@ -1,1 +1,3 @@
-<p>legal-notice works!</p>
+<app-card>
+    <iframe src="https://mihai-andrei-neacsu.de/imprint" frameborder="0"></iframe>
+</app-card>
