fix logout when profile deleted

--- a/src/app/admin/profile/profile.component.html
+++ b/src/app/admin/profile/profile.component.html
@@ -36,7 +36,7 @@
 
             <button (click)="deleteProfile()" aria-label="Delete Profile" type="button" mat-menu-item color="warn"
                 title="Delete Profile">
-                <mat-icon>delete</mat-icon> Delete
+                <mat-icon color="warn" >delete</mat-icon> Delete
             </button>
         </mat-menu>
     </div>
