--- a/src/app/admin/add-task/subtask/subtask/subtask.component.html
+++ b/src/app/admin/add-task/subtask/subtask/subtask.component.html
@@ -9,7 +9,7 @@
         <mat-icon>edit</mat-icon>
     </button>
 
-    <button (click)="onRemoveTask.emit(subtask)" mat-icon-button aria-label="Remove Subtask">
+    <button (click)="removeTask$.emit(subtask)" mat-icon-button aria-label="Remove Subtask">
         <mat-icon>remove</mat-icon>
     </button>
 </div>
