--- a/src/app/shared/shared-components/router-link/router-link.component.html
+++ b/src/app/shared/shared-components/router-link/router-link.component.html
@@ -1,6 +1,6 @@
 <a [hidden]="hidden" *ngIf="linkType === 'mat-raised-button'" mat-raised-button color="primary" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}"
-    [routerLink]="basePath ? [basePath, route.path] : [route.path]">
-    <div *ngIf="!content.children.length">{{ route.title }}</div>
+    [routerLink]="basePath ? [basePath, route?.path] : [route?.path]">
+    <div *ngIf="!content.children.length">{{ route?.title }}</div>
     <div #content>
         <ng-content></ng-content>
     </div>
