--- a/src/app/shared/shared-components/image-cropper/image-cropper.component.html
+++ b/src/app/shared/shared-components/image-cropper/image-cropper.component.html
@@ -17,7 +17,7 @@
 
     <image-cropper [hidden]="uploader.queue.length === 0" #imageCropper [imageFile]="fileToChange" class="image-cropper" [roundCropper]="true"
         [imageChangedEvent]="imageChangedEvent" [maintainAspectRatio]="true" [aspectRatio]="1 / 1" format="png"
-        (imageCropped)="imageCropped($event)" (imageLoaded)="imageLoaded($event)" (cropperReady)="cropperReady()"
+        (imageCropped)="imageCropped($event)" (imageLoaded)="imageLoaded($event)" (cropperReady)="cropperReady($event)"
         (loadImageFailed)="loadImageFailed()"></image-cropper>
 
 
