remove debuggin infos

--- a/src/app/shared/shared-components/task/task.component.html
+++ b/src/app/shared/shared-components/task/task.component.html
@@ -7,8 +7,8 @@
         <button (click)="deleteTask()" mat-menu-item>Delete</button>
     </mat-menu> -->
 </div>
-
-<h3>{{task.title}} Position: {{task.position}} Id: {{task.id}}</h3>
+<!-- Position: {{task.position}} Id: {{task.id}} -->
+<h3>{{task.title}}</h3>
 
 <p>{{task.description}}</p>
 
