--- a/src/app/admin/board/board.component.html
+++ b/src/app/admin/board/board.component.html
@@ -44,7 +44,8 @@
                         <button (click)="setPosition(list, -1)" aria-label="Move List" *ngIf="i !== 0" mat-icon-button class="move-list">
                             <mat-icon>arrow_left</mat-icon>
                         </button>
-                        <h3 #listTitleElem>{{list.name}} P.:{{list.position}}</h3>
+                        <!-- Position:{{list.position}} -->
+                        <h3 #listTitleElem>{{list.name}}</h3>
                         <app-content-editable [contentId]="i" (valueToEditChange)="updateListName($event, list)"
                             [elementViewClick]="true" [valueToEdit]="list.name" [elementView]="listTitleElem"
                             [elementViewDisplay]="'block'"></app-content-editable>
